Fix dialog covering page on some websites
Scope iframe/table CSS selectors to #glishdlg so they don't bleed into
host pages. Add explicit display:none !important for the dialog when not
open, preventing site CSS from overriding the native dialog hidden state.

--- a/src/hoverover.css
+++ b/src/hoverover.css
@@ -4,11 +4,6 @@
 
 .act:active +.b{display:block;}
 
-iframe::selection {
-    background-color: transparent;
-    color: #000;
-}
-
 .b:hover {
     display:block;
 }
@@ -35,6 +30,10 @@ iframe::selection {
     outline:none;
 }
 
+#glishdlg:not([open]) {
+    display: none !important;
+}
+
 .glishdialog { width:65%;
     height:65%;
     float: left;
@@ -45,16 +44,15 @@ iframe::selection {
     text-align: center;
 }
 
-table {
-    background:#fafafa;
-}
-
-
-
-iframe {
+#glishdlg iframe {
     background: #fafafa;
     width:100%;
     height:100%;
     padding: 5px;
+}
+
+#glishdlg iframe::selection {
+    background-color: transparent;
+    color: #000;
 }
 
